--- a/app/views/spots/indexMySpots.html.erb
+++ b/app/views/spots/indexMySpots.html.erb
@@ -5,59 +5,63 @@
     <%= link_to "Create a new spot", new_spot_path, class: "btn btn-pink mb-4"%>
   </div>
 
-  <div class="container mt-2">
-    <% @my_spots.each do |spot| %>
-      <div class="card mb-3">
-        <div class="card-body">
-          <div class="d-flex">
-            <% if spot.photo.attached? %>
-              <%= cl_image_tag spot.photo.key, class: 'card-img-top height: auto' %>
-            <% else %>
-              <%= image_tag 'flea-market-2.jpeg', class: 'card-spot-img'%>
-            <% end %>
-            <div class="ml-4">
-              <h5 class="card-title"><%= spot.title %></h5>
-              <p class="card-text"><%= spot.description %></p>
-              <p class="card-text"> <small class="text-muted">Edit your spot <%= link_to "edit", edit_spot_path(spot)%> | <%= link_to "delete", edit_spot_path(spot) %></small>
-              </p>
+  <% if current_user.spots.empty? %>
+    <p class="text-center"> You currently have no spots to offer.</p>
+  <% else %>
+    <div class="container mt-2">
+      <% @my_spots.each do |spot| %>
+        <div class="card mb-3">
+          <div class="card-body">
+            <div class="d-flex">
+              <% if spot.photo.attached? %>
+                <%= cl_image_tag spot.photo.key, class: 'card-img-top height: auto' %>
+              <% else %>
+                <%= image_tag 'flea-market-2.jpeg', class: 'card-spot-img'%>
+              <% end %>
+              <div class="ml-4">
+                <h5 class="card-title"><%= spot.title %></h5>
+                <p class="card-text"><%= spot.description %></p>
+                <p class="card-text"> <small class="text-muted">Edit your spot <%= link_to "edit", edit_spot_path(spot)%> | <%= link_to "delete", edit_spot_path(spot) %></small>
+                </p>
+              </div>
+            </div>
+
+            <div class="d-flex">
+              <% if spot.bookings.last == nil %>
+                <%= "Currently no bookings" %> </li>
+              <% else %>
+                <div class="d-flex justify-content-between flex-wrap">
+                  <% spot.bookings.each do |booking| %>
+                    <div class="card mt-4">
+                      <div class="card-header">
+                        <% if booking.status == "pending" %>
+                          <span class="badge badge-primary"><%= booking.status %></span>
+                        <% elsif booking.status == "confirmed" %>
+                          <span class="badge badge-success"><%= booking.status %></span>
+                        <% elsif booking.status == "declined" %>
+                          <span class="badge badge-danger"><%= booking.status %></span>
+                        <% end %>
+                      </div>
+                      <div class="card-body" style="width: 250px">
+                        <h5 class="card-title" style="height: 50px">Booking request by <%= booking.user.name %></h5>
+                        <p class="card-text">Booking Date: <%= booking.date %></p>
+                        <% if booking.status == "pending" %>
+                          <%= link_to "confirm booking", confirm_path(booking), class:'btn btn-success'%> <br>
+                          <%= link_to 'decline booking', decline_path(booking), class:'btn btn-danger' %> <br>
+                        <% elsif booking.status == "declined" %>
+                          <%= "You declined the booking." %>
+                        <% elsif booking.status == "confirmed" %>
+                          <%= "You confirmed the booking." %>
+                        <% end %>
+                      </div>
+                    </div>
+                  <% end %>
+                </div>
+              <% end %>
             </div>
           </div>
-
-          <div class="d-flex">
-            <% if spot.bookings.last == nil %>
-              <%= "Currently no bookings" %> </li>
-            <% else %>
-              <div class="d-flex justify-content-between flex-wrap">
-                <% spot.bookings.each do |booking| %>
-                  <div class="card mt-4">
-                    <div class="card-header">
-                      <% if booking.status == "pending" %>
-                        <span class="badge badge-primary"><%= booking.status %></span>
-                      <% elsif booking.status == "confirmed" %>
-                        <span class="badge badge-success"><%= booking.status %></span>
-                      <% elsif booking.status == "declined" %>
-                        <span class="badge badge-danger"><%= booking.status %></span>
-                      <% end %>
-                    </div>
-                    <div class="card-body" style="width: 250px">
-                      <h5 class="card-title" style="height: 50px">Booking request by <%= booking.user.name %></h5>
-                      <p class="card-text">Booking Date: <%= booking.date %></p>
-                      <% if booking.status == "pending" %>
-                        <%= link_to "confirm booking", confirm_path(booking), class:'btn btn-success'%> <br>
-                        <%= link_to 'decline booking', decline_path(booking), class:'btn btn-danger' %> <br>
-                      <% elsif booking.status == "declined" %>
-                        <%= "You declined the booking." %>
-                      <% elsif booking.status == "confirmed" %>
-                        <%= "You confirmed the booking." %>
-                      <% end %>
-                    </div>
-                  </div>
-                <% end %>
-              </div>
-            <% end %>
-          </div>
         </div>
-      </div>
+      <% end %>
     <% end %>
   </div>
 
