--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <%= render 'shared/banner-home' %>
 <br>
 <div class="container">
-  <h2> Search Results </h2>
+  <h2> Most popular flea markets in Berlin </h2>
   <%= render 'shared/cardlist' %>
 </div>
 
