Created the spots edit page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
 @import "pages/index";
 @import "pages/spots/show";
 @import "pages/spots/new";
+@import "pages/spots/edit";
 @import "pages/user/show";
 @import "pages/user/edit";
 
