--- a/app/views/spots/_info_window.html.erb
+++ b/app/views/spots/_info_window.html.erb
@@ -1,3 +1,3 @@
 <h2><%= spot.title %></h2>
-<p><%= spot.price %></p>
-<p><%= spot.address %></p>
+<p><strong>Price:</strong> <%= spot.price %></p>
+<p><strong>Address:</strong> <%= spot.address %></p>
