--- a/app/views/shared/_banner-home.html.erb
+++ b/app/views/shared/_banner-home.html.erb
@@ -15,15 +15,15 @@
           %>
         </div>
         <div>
-          <%= submit_tag "Search", class: "btn btn-gradient" %>
+          <%= submit_tag "Search", class: "btn btn-pink" %>
         </div>
         <% end %>
       </div>
     </div>
 
     <div class="homepage-buttons mt-2">
-      <%= link_to 'View all spots', spots_path, class: "btn btn-primary"%>
-      <%= link_to "Create a new spot", new_spot_path, class: "btn btn-primary"%>
+      <%= link_to 'View all spots', spots_path, class: "btn btn-purple"%>
+      <%= link_to "Create a new spot", new_spot_path, class: "btn btn-purple"%>
     </div>
   </div>
 </div>
