--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -19,34 +19,36 @@
   </div>
 
 
-<div id="spots">
-  <% @spots.each do |spot| %>
-    <div class="card-spot mt-4">
-      <% if spot.photo.attached? %>
-      <%= cl_image_tag spot.photo.key, crop: :fill %>
-      <% else %>
-      <%= image_tag 'flea-market-2.jpeg'%>
-      <% end %>
-      <!-- <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" /> -->
-      <div class="card-spot-infos">
-        <div>
-          <h2><%= link_to spot.title, spot_path(spot) %></h2>
-          <p><%= spot.description %></p>
+<div class="d-flex">
+  <div class="f-flex flex-wrap">
+    <% @spots.each do |spot| %>
+      <div class="card-spot mt-4">
+        <% if spot.photo.attached? %>
+        <%= cl_image_tag spot.photo.key, crop: :fill %>
+        <% else %>
+        <%= image_tag 'flea-market-2.jpeg'%>
+        <% end %>
+        <!-- <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" /> -->
+        <div class="card-spot-infos">
+          <div>
+            <h2><%= link_to spot.title, spot_path(spot) %></h2>
+            <p><%= spot.description %></p>
+          </div>
+          <h2 class="card-spot-pricing"><%=spot.price%>€</h2>
+          <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-spot-user avatar-bordered" />
         </div>
-        <h2 class="card-spot-pricing"><%=spot.price%>€</h2>
-        <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-spot-user avatar-bordered" />
       </div>
-    </div>
-  <% end %>
+    <% end %>
+  </div>
+
+  <div
+    class="container mt-4"
+    id="map";
+    style="width: 100%;
+    height: 600px;"
+    data-markers="<%= @markers.to_json %>"
+    data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+  ></div>
+</div>
 </div>
 
-<div
-  class="container mt-4"
-  id="map";
-  style="width: 100%;
-  height: 600px;"
-  data-markers="<%= @markers.to_json %>"
-  data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
-></div>
-
-</div>
