--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,9 +1,14 @@
 .footer {
   background: #F4F4F4;
   text-align: center;
-  height: 100px;
+  height: 50px;
+  margin-top: 10px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
+  position: relative;
+  left: 0;
+  bottom: 0;
+  width: 100%;
 }
 
 .footer-links {
