--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -28,7 +28,7 @@
       <% if spot.photo.attached? %>
       <%= cl_image_tag spot.photo.key, crop: :fill %>
       <% else %>
-      <%= image_tag 'flea-market-2.jpeg'%>
+      <%= image_tag "#{spot.title}.png"%>
       <% end %>
       <!-- <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" /> -->
       <div class="card-spot-infos">
