--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,7 @@
 @import "pages/spots/edit";
 @import "pages/user/show";
 @import "pages/user/edit";
+@import "pages/bookings/show";
 
 // Graphical essentials
 @import "components/footer";
