--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,11 +1,23 @@
-<h1><%= @booking.spot.title %><%= link_to booking_path(@booking), method: :delete, data: { confirm: "Are you sure?" } do %>
-    <i class="fa fa-trash destroy_booking"></i>
-    <% end %>
-</h1>
-<span class="badge badge-primary"><%= @booking.status %></span>
-<ul>
-<li>Date: <%= @booking.date %></li>
-<li>Description: <%= @booking.spot.description %></li>
-<li>Price: <%= @booking.spot.price %></li>
-</ul>
-<%= link_to "Show all Spots", spots_path %>
+<div class="container">
+  <div class="booking-show-container">
+    <div class="booking-show">
+      <h1><%= @booking.spot.title %><%= link_to booking_path(@booking), method: :delete, data: { confirm: "Are you sure?" } do %>
+        <i class="fa fa-trash destroy_booking"></i>
+        <% end %>
+      </h1>
+      <div class="booking-status">
+        <span class="badge badge-primary"><%= @booking.status %></span>
+      </div>
+      <div class="booking-details">
+        <ul>
+          <li><strong>Date:</strong> <%= @booking.date %></li>
+          <li><strong>Description:</strong> <%= @booking.spot.description %></li>
+          <li><strong>Price:</strong> <%= @booking.spot.price %></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="booking-button">
+    <%= link_to "Show all Spots", spots_path %>
+  </div>
+</div>
