--- a/app/views/shared/_cardlist.html.erb
+++ b/app/views/shared/_cardlist.html.erb
@@ -5,7 +5,7 @@
       <% if spot.photo.attached? %>
         <%= cl_image_tag spot.photo.key, crop: :fill %>
       <% else %>
-        <%= image_tag 'flea-market-2.jpeg'%>
+        <%= image_tag "#{spot.title}.png"%>
       <% end %>
       <!-- <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" /> -->
       <div class="card-spot-infos">
@@ -24,7 +24,7 @@
       <% if spot.photo.attached? %>
         <%= cl_image_tag spot.photo.key, crop: :fill %>
       <% else %>
-        <%= image_tag 'flea-market-2.jpeg'%>
+        <%= image_tag "#{spot.title}.png"%>
       <% end %>
       <!-- <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" /> -->
       <div class="card-spot-infos">
@@ -43,7 +43,7 @@
       <% if spot.photo.attached? %>
         <%= cl_image_tag spot.photo.key, crop: :fill %>
       <% else %>
-        <%= image_tag 'flea-market-2.jpeg'%>
+        <%= image_tag "#{spot.title}.png"%>
       <% end %>
       <!-- <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" /> -->
       <div class="card-spot-infos">
