--- a/app/views/spots/indexMySpots.html.erb
+++ b/app/views/spots/indexMySpots.html.erb
@@ -16,7 +16,7 @@
               <% if spot.photo.attached? %>
                 <%= cl_image_tag spot.photo.key, class: 'card-img-top height: auto' %>
               <% else %>
-                <%= image_tag 'flea-market-2.jpeg', class: 'card-spot-img'%>
+                <%= image_tag "#{spot.title}.png", class: 'card-spot-img'%>
               <% end %>
               <div class="ml-4">
                 <h5 class="card-title"><%= spot.title %></h5>
