--- a/app/assets/stylesheets/pages/spots/_index.scss
+++ b/app/assets/stylesheets/pages/spots/_index.scss
@@ -1,6 +1,17 @@
 // Import page-specific CSS files here.
 @import "home";
 
+.map-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.map-header img {
+  width: 10px;
+  height: 10px;
+}
+
 .container-index {
   text-align: center;
 }
