--- a/app/views/spots/_info_window.html.erb
+++ b/app/views/spots/_info_window.html.erb
@@ -1,3 +1,9 @@
-<h2><%= spot.title %></h2>
-<p><strong>Price:</strong> <%= spot.price %></p>
-<p><strong>Address:</strong> <%= spot.address %></p>
+<div>
+  <div class="map-header">
+    <h2><%= spot.title %></h2>
+  </div>
+  <div class="map-details">
+    <p><strong>Price:</strong> <%= spot.price %></p>
+    <p><strong>Address:</strong> <%= spot.address %></p>
+  </div>
+</div>
