--- a/app/views/spots/indexMySpots.html.erb
+++ b/app/views/spots/indexMySpots.html.erb
@@ -14,7 +14,7 @@
           <div class="card-body">
             <div class="d-flex">
               <% if spot.photo.attached? %>
-                <%= cl_image_tag spot.photo.key, class: 'card-img-top height: auto' %>
+                <%= cl_image_tag spot.photo.key, class: 'card-spot-img' %>
               <% else %>
                 <%= image_tag "#{spot.title}.png", class: 'card-spot-img'%>
               <% end %>
