--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -23,9 +23,9 @@
     <% @spots.each do |spot| %>
       <div class="card-spot mt-4">
         <% if spot.photo.attached? %>
-
+          <%= cl_image_tag spot.photo.key, crop: :fill %>
         <% else %>
-        <%= image_tag "#{spot.title}.png"%>
+        <%= image_tag "images/flea-market-2.jpeg"%>
         <% end %>
         <!-- <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" /> -->
         <div class="card-spot-infos">
