--- a/app/views/spots/indexMySpots.html.erb
+++ b/app/views/spots/indexMySpots.html.erb
@@ -14,9 +14,9 @@
           <div class="card-body">
             <div class="d-flex">
               <% if spot.photo.attached? %>
-                <%= cl_image_tag spot.photo.key, class: 'card-img-top height: auto' %>
+                <%= cl_image_tag spot.photo.key, width:250, height:150, class: 'card-img-top' %>
               <% else %>
-                <%= image_tag "#{spot.title}.png", class: 'card-spot-img'%>
+                <%= image_tag "flea-market-6.jpeg", class: 'card-spot-img'%>
               <% end %>
               <div class="ml-4">
                 <h5 class="card-title"><%= spot.title %></h5>
