--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,11 +1,21 @@
-<h1><%= @booking.spot.title %><%= link_to booking_path(@booking), method: :delete, data: { confirm: "Are you sure?" } do %>
-    <i class="fa fa-trash destroy_booking"></i>
-    <% end %>
-</h1>
-<span class="badge badge-primary"><%= @booking.status %></span>
-<ul>
-<li>Date: <%= @booking.date %></li>
-<li>Description: <%= @booking.spot.description %></li>
-<li>Price: <%= @booking.spot.price %></li>
-</ul>
-<%= link_to "Show all Spots", spots_path %>
+<div class="container mt-4">
+  <div class="text-center">
+    <h1><%= @booking.spot.title %><%= link_to booking_path(@booking), method: :delete, data: { confirm: "Are you sure?" } do %>
+      <i class="fa fa-trash destroy_booking"></i>
+      <% end %>
+    </h1>
+  </div>
+
+  <div class='card mb-4'>
+    <span class="badge badge-primary"><%= @booking.status %></span>
+    <ul>
+    <li>Date: <%= @booking.date %></li>
+    <li>Description: <%= @booking.spot.description %></li>
+    <li>Price: <%= @booking.spot.price %></li>
+    </ul>
+  </div>
+
+  <div class="text-center">
+    <%= link_to "Show all my bookings", bookings_path, class: 'btn btn-pink'%>
+  </div>
+</div>
