--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -2,6 +2,7 @@
   display: flex;
 }
 
+
 .cards {
   flex-grow: 1;
   display: grid;
@@ -15,6 +16,13 @@
   position: sticky;
   top: 0;
   background-color: black !important;
+}
+
+
+.mapbox {
+  height: 100vh;
+  position: fixed;
+  top: 0;
 }
 
 /*Media Queries*/
