--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -1,52 +1,62 @@
-<div class="container mt-4">
-  <div class="search-form">
-    <div class="input"><%= form_tag spots_path, method: :get do %>
-      <%= text_field_tag :query,
-      params[:query],
-      class: "form-control",
-      placeholder: "Find a spot"
-      %>
-    </div>
-    <div>
-      <%= submit_tag "Search", class: "btn btn-pink" %>
-    </div>
-    <% end %>
-  </div>
+<div class= "d-flex">
 
-  <div class="spot-index-buttons mt-2">
-    <%= link_to 'View all spots', spots_path, class: "btn btn-purple"%>
-    <%= link_to "Create a new spot", new_spot_path, class: "btn btn-purple"%>
-  </div>
-
-<div class="d-flex">
-  <div class="f-flex flex-wrap">
-    <% @spots.each do |spot| %>
-      <div class="card-spot mt-4">
-        <% if spot.photo.attached? %>
-        <%= cl_image_tag spot.photo.key, crop: :fill %>
-        <% else %>
-        <%= image_tag "#{spot.title}.png"%>
-        <% end %>
-        <!-- <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" /> -->
-        <div class="card-spot-infos">
+  <div class="container" style="width:70%; position: relative; margin-left: 0px;">
+    <!-- <div class="container mt-4"> -->
+      <div class="search-form">
+        <div class="input"><%= form_tag spots_path, method: :get do %>
+          <%= text_field_tag :query,
+          params[:query],
+          class: "form-control",
+          placeholder: "Find a spot"
+          %>
+        <!-- </div> -->
           <div>
-            <h2><%= link_to spot.title, spot_path(spot) %></h2>
-            <p><%= spot.description %></p>
+            <%= submit_tag "Search", class: "btn btn-pink" %>
           </div>
-          <h2 class="card-spot-pricing"><%=spot.price%>€</h2>
-          <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-spot-user avatar-bordered" />
+          <% end %>
         </div>
       </div>
-    <% end %>
+
+      <div class="spot-index-buttons mt-2">
+        <%= link_to 'View all spots', spots_path, class: "btn btn-purple"%>
+        <%= link_to "Create a new spot", new_spot_path, class: "btn btn-purple"%>
+      </div>
+
+      <div class="d-flex">
+        <div class="f-flex flex-wrap">
+          <% @spots.each do |spot| %>
+          <div class="card-spot mt-4">
+            <% if spot.photo.attached? %>
+            <%= cl_image_tag spot.photo.key, crop: :fill %>
+            <% else %>
+            <%= image_tag "#{spot.title}.png"%>
+            <% end %>
+            <!-- <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" /> -->
+          <div class="card-spot-infos">
+            <div>
+              <h2><%= link_to spot.title, spot_path(spot) %></h2>
+              <p><%= spot.description %></p>
+            </div>
+            <h2 class="card-spot-pricing"><%=spot.price%>€</h2>
+            <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-spot-user avatar-bordered" />
+            </div>
+          </div>
+          <% end %>
+        </div>
+      </div>
+
   </div>
 
   <div
-    class="container mt-4"
+    class="container"
     id="map";
-    style="width: 100%;
-    height: 600px;"
+    style="width: 40%;
+    height: 100vh;
+    position: sticky;
+    right: 0px;
+    top: 0px;"
     data-markers="<%= @markers.to_json %>"
     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
   ></div>
-</div>
+
 </div>
