--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,7 @@
     <% if @user.photo.attached? %>
       <%= cl_image_tag @user.photo.key %>
     <% else %>
-      <%= image_path("flea-market-2.jpeg")%>
+      <%= image_tag image_path("flea-market-2.jpeg")%>
     <% end %>
   </div>
   <div class="profile-information">
