--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,8 +4,8 @@
 @import "navbar";
 @import "button";
 @import "banner";
-@import "searchbar";
+@import "search-form";
 @import "card";
 @import "container";
-// @import "map";
+@import "map";
 @import "image";
