--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -2,52 +2,103 @@
   display: flex;
 }
 
-.cards {
-  flex-grow: 1;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 16px;
-  padding: 16px;
-}
-
-.map-index {
-  height: 100vh;
-  position: sticky;
-  top: 0;
-  background-color: black !important;
-}
 
 /*Media Queries*/
 
-/*Smallest device*/
+// Smallest device
 @media (min-width: 100px) and (max-width: 575px) {
   .cards {
     grid-template-columns: 1fr;
+    display: grid;
+    grid-gap: 16px;
+    width: 100%;
+  }
+  .index-spots-map-cards {
+  display: block;
+  margin-top: 20px;
   }
   #map {
-    display: none;
+    width: 100%;
+    padding: 0;
   }
 }
 
-/*Small devices (landscape phones, 576px and up)*/
+// Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
   .cards {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
+    display: grid;
+    grid-gap: 16px;
+    width: 50%;
   }
-  #map {
-    display: none;
-  }
-}
-
-/*Medium devices (tablets, 768px and up)*/
-@media (min-width: 1200px) {
-  .cards {
-    grid-template-columns: 1fr 1fr 1fr;
+ .index-spots-map-cards {
+    display: flex;
+    margin-top: 20px;
   }
   #map {
     display: block;
+    width: 50%;
+    height: 100vh;
+    position: sticky;
+    top: 0;
   }
 }
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+  .cards {
+    grid-template-columns: 1fr;
+    display: grid;
+    grid-gap: 16px;
+    width: 50%;
+  }
+  .index-spots-map-cards {
+    display: flex;
+    margin-top: 20px;
+  }
+  #map {
+    display: block;
+    width: 50%;
+    height: 100vh;
+    position: sticky;
+    top: 0;
+  }
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+  .cards {
+    grid-template-columns: 1fr 1fr;
+    display: grid;
+    grid-gap: 16px;
+    width: 50%;
+  }
+  #map {
+    display: block;
+    width: 50%;
+    height: 100vh;
+    position: sticky;
+    top: 0;
+  }
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+  .cards {
+    grid-template-columns: 1fr 1fr;
+    display: grid;
+    grid-gap: 16px;
+    width: 50%;
+  }
+  #map {
+    display: block;
+    width: 50%;
+    height: 100vh;
+    position: sticky;
+    top: 0;
+  }
+}
+
 
 .mapboxgl-popup {
   max-width: 200px;
