--- a/app/assets/stylesheets/components/_search-form.scss
+++ b/app/assets/stylesheets/components/_search-form.scss
@@ -1,12 +1,18 @@
-.search-form-control {
-  position: relative;
+
+#search-index {
+  .input {
+    margin: 0;
+  }
 }
 
-.search-form-control .btn {
-  position: absolute;
+.search-form-control {
+  .btn {
+  position: relative;
   top: 8px;
   bottom: 8px;
-  right: 8px;
+  right: 20px;
+  border-radius: 0 4px 4px 0 !important;
+ }
 }
 
 .search-form-control .form-control {
@@ -19,4 +25,9 @@
   border: 1px solid #1EDD88;
   outline: none !important;
   box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+}
+
+.form-control {
+  position: relative;
+  margin: 0;
 }
