--- a/app/assets/stylesheets/pages/spots/_show.scss
+++ b/app/assets/stylesheets/pages/spots/_show.scss
@@ -12,10 +12,56 @@
 }
 
 .container-spots-show {
-  display: flex;
+  display: grid;
+  grid-gap: 16px;
   justify-content: space-between;
   margin-top: 20px;
 }
+
+
+// Smallest device
+@media (min-width: 100px) and (max-width: 575px) {
+  .container-spots-show {
+    grid-template-columns: 1fr;
+  }
+  .container-spots-show-image {
+    height: 300px;
+    width: 100%;
+  }
+  .container-spots-show-form  {
+    height: 300px;
+    width: 100%;
+  }
+}
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) {
+  .container-spots-show {
+    grid-template-columns: 1fr;
+  }
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+  .container-spots-show {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+  .container-spots-show {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+  .container-spots-show {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
 
 .container-spots-show-image ul {
    list-style-type: none;
@@ -27,10 +73,11 @@
   background-color: white;
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  height: 300px;
+  height: 100%;
   width: 100%;
   text-align: center;
   margin-top: 20px;
+  padding: 5px;
 }
 
 .container-spots-show-image img {
@@ -42,20 +89,15 @@
   background-color: white;
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  height: 300px;
-  width: 50%;
   text-align: center;
-  margin-right: 10px;
 }
 
 .container-spots-show-form  {
   background-color: white;
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  height: 300px;
-  width: 50%;
   text-align: center;
-  margin-left: 10px;
+  padding: 10px;
 }
 
 .container-spots-show-details h1 {
@@ -63,16 +105,5 @@
 }
 .container-spots-show-form h1 {
   margin-top: 20px;
-}
-
-.new-booking-input {
-  display: flex;
-  justify-item: center;
-  width: 300px;
-}
-
-.new-booking-button {
-  display: flex;
-  justify-item: center;
 }
 
