--- a/app/views/bookings/_new.html.erb
+++ b/app/views/bookings/_new.html.erb
@@ -8,7 +8,7 @@
   <br>
 
   <div class="form-actions new-booking-button">
-    <%= f.button :submit, class: "btn btn-primary" %>
+    <%= f.button :submit, class: "btn btn-pink" %>
   </div>
 <% end %>
 </div>
