added some mobile styling to every page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@
 @import "components/index";
 @import "pages/index";
 @import "pages/spots/show";
+@import "pages/spots/indexmyspots";
 @import "pages/spots/new";
 @import "pages/spots/edit";
 @import "pages/user/show";
