--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -15,7 +15,6 @@
   }
   .index-spots-map-cards {
   display: block;
-  margin-top: 20px;
   }
   #map {
     width: 100%;
@@ -26,21 +25,17 @@
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
   .cards {
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 1fr;
     display: grid;
     grid-gap: 16px;
-    width: 50%;
+    width: 100%;
   }
- .index-spots-map-cards {
-    display: flex;
-    margin-top: 20px;
+  .index-spots-map-cards {
+    display: block;
   }
   #map {
-    display: block;
-    width: 50%;
-    height: 100vh;
-    position: sticky;
-    top: 0;
+    width: 100%;
+    padding: 0;
   }
 }
 
@@ -49,19 +44,21 @@
   .cards {
     grid-template-columns: 1fr;
     display: grid;
-    grid-gap: 16px;
-    width: 50%;
+    grid-gap: 1px;
+    width: 30%;
   }
   .index-spots-map-cards {
     display: flex;
-    margin-top: 20px;
   }
-  #map {
+  .map {
     display: block;
     width: 50%;
-    height: 100vh;
     position: sticky;
     top: 0;
+    margin-left: 16px;
+  }
+  #map {
+    width: 70%;
   }
 }
 
@@ -76,9 +73,12 @@
   #map {
     display: block;
     width: 50%;
-    height: 100vh;
     position: sticky;
     top: 0;
+  }
+    .map {
+    display: block;
+    margin-left: 16px;
   }
 }
 
@@ -90,10 +90,16 @@
     grid-gap: 16px;
     width: 50%;
   }
+  .index-spots-map-cards {
+    display: flex;
+  }
+  .map {
+    display: block;
+    margin-left: 16px;
+  }
   #map {
     display: block;
     width: 50%;
-    height: 100vh;
     position: sticky;
     top: 0;
   }
