--- a/app/views/shared/_map.html.erb
+++ b/app/views/shared/_map.html.erb
@@ -2,9 +2,11 @@
     class="container mt-4"
     id="map";
     style="width: 100%;
+    position: sticky;
+    top: 0;
     height: 100vh;
-  position: sticky;
-  top: 0;"
+    margin-top: 0;
+    border-radius: 4px;"
     data-markers="<%= @markers.to_json %>"
     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
   ></div>
