added some mobile styling to every page

--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container mt-4">
 
-  <div class="container mt-2" id="test">
+  <div id="test mt-2">
       <div class="search-form">
         <%= render 'shared/search-form' %>
       </div>
