--- a/app/assets/stylesheets/pages/user/_show.scss
+++ b/app/assets/stylesheets/pages/user/_show.scss
@@ -5,6 +5,7 @@
 
 .profile-image img {
   width: 200px;
+  height: 200px;
   border-radius: 50%;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
@@ -17,11 +18,24 @@
   align-items: center;
 }
 
-.profile-information {
-  margin-left: 330px;
+.profile-buttons {
+  width: 350px;
+  margin-top: 20px;
+  margin-bottom: 70px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  vertical-align: center;
+  a  {
+    width: 150px;
+  }
 }
 
-.profile-buttons {
-  margin-top: 50px;
-  margin-bottom: 70px;
+.profile-buttons-container {
+  display: flex;
+  justify-content: space-around;
+}
+
+.profile-details {
+  text-align: center;
 }
