--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,7 @@
+<div class="container">
+  <br>
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
-
+<br>
 <%= simple_form_for(resource, as: resource_name, url: user_registration_path, html: { method: :patch }) do |f| %>
   <%= f.error_notification %>
 
@@ -23,14 +25,16 @@
                 input_html: { autocomplete: "current-password" } %>
     <%= f.input :photo, as: :file %>
   </div>
-
+<br>
   <div class="form-actions">
-    <%= f.button :submit, "Update" %>
+    <%= f.button :submit, "Update" , class: "btn btn-pink"%>
   </div>
 <% end %>
-
+<br>
+<br>
 <h3>Cancel my account</h3>
-
+<br>
 <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+<br>
+<%= link_to "Back", user_path(current_user), class:"btn btn-pink" %>
+</div>
