--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -20,7 +20,7 @@
         <%= f.input :photo, as: :file %>
       </div>
       <div class="form-actions profile-button">
-        <%= f.button :submit, class: "btn btn-gradient" %>
+        <%= f.button :submit, class: "btn btn-pink" %>
       </div>
     <% end %>
   </div>
