styling for the search bar on home page

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -11,9 +11,16 @@
   }
 }
 
-.homepage-buttons {
+.btns {
+  margin-top: 0;
+  display: flex;
+  justify-content: left;
   position: relative;
-  bottom: 525px;
+  left: 0;
+}
+
+#new-spot {
+  margin-left: 5px;
 }
 
 .banner h1 {
